`Refactored backend code with various changes, including updated DTOs, service classes, and domain models.`